--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,123 @@
-/* styles.css */
-body {
-    background-color: rebeccapurple;
-  }
+/* *
+{
+  outline: 1px solid red;
+} */
+
+body 
+{
+   display: grid;
+   grid-template-columns: 1fr 2fr;
+   grid-template-rows: 100vh;
+   margin: 0;
+   font-family: "Inter", sans-serif;
+}
+
+#left-container 
+{
+  background-color: #8D4AF1;
+  color: white;
+  height: 100%;
+  padding-top: 20px;
+  padding-left: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.hashtag 
+{
+  font-size: xx-large;
+}
+
+.projects 
+{
+  position: relative;
+  top: -4px;
+  left: 10px;
+  font-size: large;
+}
+
+.project-title 
+{
+  font-weight: bold;
+  font-size: 25px;
+  position: relative;
+  left: 10px;
+}
+
+#right-container 
+{
+  padding-top: 100px;
+  padding-left: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-right: 30px;
+}
+a {
+  all: unset;
+  margin-left: -5px;
+}
+
+
+ul 
+{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+li 
+{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 20px;
+  border-top: 1px solid #ccc;
+  padding-top: 20px;
+}
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+}
+
+.due 
+{
+  font-size: xx-small;
+  margin: 10px 10px 10px 32px;
+}
+
+.priority
+{
+  font-size: x-small;
+  margin-left: 20px;
+}
+
+input[type=checkbox]
+{
+  /* Double-sized Checkboxes */
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  transform: scale(2);
+  padding: 10px;
+  margin-right: 10px;
+}
+
+/* Might want to wrap a span around your checkbox text */
+.checkboxtext
+{
+  /* Checkbox text */
+  font-size: 110%;
+  display: inline;
+}
+
+#add-task
+{
+  margin-left: 72px;
+}
